--- a/wot-dijkstra/build.gradle
+++ b/wot-dijkstra/build.gradle
@@ -19,6 +19,9 @@ dependencies {
     // Logging
     testImplementation "ch.qos.logback:logback-classic:$logbackVersion"
 
+    // @Nullable, @Nonnull annotations
+    implementation "com.google.code.findbugs:jsr305:3.0.2"
+
     implementation(project(":pgpainless-core"))
 }
 
